# magnipy

./: .gitignore  LICENSE  README.md  intro_tutorial.ipynb  pyproject.toml  tutorial_diversipy.ipynb  tutorial_magnipy.ipynb
.github/workflows/: black.yaml  docs.yaml
magnipy/: __init__.py  approximation_algorithms.py  datasets.py  distances.py  diversipy.py  diversities.py  function_utils.py  graphipy.py  magnipy.py  magnitude.py  magnitude_dimension.py  spread.py  summaries.py  tutorial.ipynb
magnipy/magnitude/: approximation.py  compute.py  convergence.py  dimension.py  distances.py  function_operations.py  metric_choice.py  metrics.py  scales.py  weights.py
magnipy/utils/: datasets.py  plots.py  tutorial_data.py
notebooks/: diversipy_tutorial.ipynb  graphipy_tutorial.ipynb  magnipy_tutorial.ipynb  mode_dropping.ipynb  tutorial_data.py
scripts/: __init__.py  benchmark.py  benchmark_gpu.py
tests/: test_complete_graph.py  test_graphs.py  test_mag.py
