[tool.poetry]
name = "magnipy"
version = "0.1.0"
description = "A framework for computing the magnitude of a metric space."
authors = ["LimbeckKat <katharina.limbeck@helmholtz-munich.de>"]
license = "BSD-3-Clause"
readme = "README.md"
include = ["README.md"]

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.12.0"
krypy = "^2.2.0"
matplotlib = "^3.8.3"
scikit-learn = "^1.4.1.post1"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
